# timal

./: .gitignore  Dioxus.toml  justfile  package-lock.json  package.json
.github/workflows/: tests.yaml
assets/: tailwind.css
backend/: pyproject.toml
backend/src/millie/: main.py
backend/src/millie/_internal/: db.py  message.py  models.py
backend/src/millie/_internal/scripts/: main.py
frontend/: Cargo.toml  tailwind.config.js
frontend/src/: main.rs
frontend/src/components/: dropzone.rs  mod.rs
frontend/src/views/: analysis.rs  mod.rs
src/: main.rs
src/components/: dropzone.rs  navbar.rs
src/views/: home.rs
